Add frontend script to connect backend

--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
         <p>Email: gyanvriksh.edu@gmail.com | Phone: +91-8585895058</p>
     </footer>
     <script src="enquiry.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
