--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <img src="./web-stock-online-learning-b-x-1024.jpg" alt="Student Left" class="popup-left-img">
         <img src="./web-stock-online-learning-b-x-1024.jpg" alt="Student Right" class="popup-right-img">
 
-        <img src="./Screenshot 2026-01-25 033020.png" alt="Tutor Photo" class="profile-img">
+        <img src="./Screenshot 2026-01-25 033020.png" alt="Logo" class="profile-img">
         <h1>Transform Your Learning with Online Tutors</h1>
         <p>Expert guidance, personalized classes, and success-driven results.</p>
         <p><strong>We offer One-to-One Classes for a personalized learning experience!</strong></p>
@@ -245,7 +245,17 @@
                 <h4>Trishna Dey</h4>
                 <p>Co-Founder & Managing Director </p>
             </div>
-
+            <div class="col-md-6 mb-6">
+                <img src="./Nitesh.png" class="tutor-img" alt="Tutor 2">
+                <h4>Nitesh Kumar</h4>
+                <p>Maths Tutor </p>
+            </div>
+            <div class="col-md-6 mb-6">
+                <img src="./Aryan.jpeg" class="tutor-img" alt="Tutor 2">
+                <h4>Aryan Baranwal</h4>
+                <p>Chemistry Tutor</p>
+            </div>
+             
         </div>
     </div>
 
