--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <p>Founder & 5yrs Teaching Exp.</p>
             </div>
             <div class="col-md-6 mb-6">
-                <img src="./WhatsApp Image 2026-01-07 at 02.23.26.jpeg" class="tutor-img" alt="Tutor 2">
+                <img src="./Trishna.jpeg" class="tutor-img" alt="Tutor 2">
                 <h4>Trishna Dey</h4>
                 <p>Co-Founder & Managing Director </p>
             </div>
