--- a/index.html
+++ b/index.html
@@ -246,16 +246,16 @@
                 <p>Co-Founder & Managing Director </p>
             </div>
             <div class="col-md-6 mb-6">
-                <img src="./Nitesh.png" class="tutor-img" alt="Tutor 2">
+                <img src="./Nitesh.png" class="tutor-img" alt="Tutor 3">
                 <h4>Nitesh Kumar</h4>
                 <p>Maths Tutor </p>
             </div>
             <div class="col-md-6 mb-6">
-                <img src="./Aryan.jpeg" class="tutor-img" alt="Tutor 2">
+                <img src="./Aryan.jpeg" class="tutor-img" alt="Tutor 4">
                 <h4>Aryan Baranwal</h4>
-                <p>Chemistry Tutor</p>
+                <p>Polity & Humanities</p>
             </div>
-             
+
         </div>
     </div>
 
