--- a/admin.html
+++ b/admin.html
@@ -13,7 +13,7 @@
 
     <!-- 🔐 LOGIN PROTECTION -->
     <script>
-        if (sessionStorage.getItem("adminLoggedIn") !== "true") {
+        if (localStorage.getItem("admin") !== "true") {
             window.location.replace("admin-login.html");
         }
     </script>
@@ -59,7 +59,6 @@
 
         </div>
 
-
         <!-- 🔘 STATUS FILTER BUTTONS -->
         <div class="mb-3 text-center">
             <button class="btn btn-secondary btn-sm me-1" onclick="filterStatus('ALL')">All</button>
@@ -93,14 +92,17 @@
 
     </div>
 
+    <!-- 🔓 LOGOUT -->
     <script>
         function logout() {
-            sessionStorage.removeItem("adminLoggedIn");
+            localStorage.removeItem("admin");
             window.location.replace("admin-login.html");
         }
     </script>
 
+    <!-- ADMIN LOGIC -->
     <script src="admin.js"></script>
+
 </body>
 
 </html>
