--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
             <div class="col-12">
                 <textarea class="form-control" id="message" name="message" rows="3"
-                    placeholder="Your Requirement (Optional)"></textarea>
+                    placeholder="Your Requirement "></textarea>
             </div>
 
             <div class="col-12 text-center">
