Fix submit button id

--- a/index.html
+++ b/index.html
@@ -337,7 +337,10 @@
             </div>
 
             <div class="col-12 text-center">
-                <button type="submit" class="btn-highlight">Submit</button>
+                <button id="submitBtn" type="submit" class="btn-highlight">
+                    Submit
+                </button>
+
             </div>
         </form>
 
