Fix submit button id

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             padding: 10px 20px;
         }
 
+        html {
+            scroll-behavior: smooth;
+        }
+
         .phone-number {
             font-size: 16px;
             font-weight: bold;
@@ -197,10 +201,6 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#Result">Our Results</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#Appoint">Book An Appointment</a>
-                    </li>
-
                 </ul>
             </div>
         </div>
@@ -212,6 +212,7 @@
 
         <img src="./Screenshot 2026-01-25 033020.png" alt="Logo" class="profile-img">
         <h1>Transform Your Learning with Online Tutors</h1>
+        <h2>Planting Knowledge,Harvesting Success!</h2>
         <p>Expert guidance, personalized classes, and success-driven results.</p>
         <p><strong>We offer One-to-One Classes for a personalized learning experience!</strong></p>
         <a href="#trial" class="btn-highlight">Book a Trial Session</a>
@@ -219,9 +220,15 @@
 
     <div class="container mt-5">
         <h2 id="about" class="text-center">About Us</h2>
-        <p class="text-center">GyanVriksh Academy is dedicated to providing high-quality online education through
-            experienced
-            tutors.</p>
+        <p class="text-center">GyanVriksh Academy is an online education platform focused on building strong academic
+            foundations and guiding students toward success. We provide expert online tuitions for Classes VI–XII,
+            covering all subjects at the school level and specialized coaching in Physics, Chemistry, Mathematics, and
+            Biology for senior classes.
+
+            We also prepare students for Sainik School, Ram Krishna Mission, and Olympiads, along with training in
+            computer and programming subjects such as Artificial Intelligence, C, C++, Java, Python, HTML, and CSS.
+            Additionally, we offer placement guidance for college students and coaching for government job aspirants in
+            Quantitative Aptitude and Reasoning.</p>
 
         <h2 id="methodology" class="text-center mt-5">Our Working Methodology</h2>
         <div class="methodology-container">
@@ -262,7 +269,7 @@
     <div id="trial" class="text-center mt-5">
         <h2>Book a Trial Session</h2>
         <p>Experience our teaching before enrolling! Click below to get started.</p>
-        <a href="#contact" class="btn-highlight">Get Started</a>
+        <a href="#contact-form" class="btn-highlight">Get Started</a>
     </div>
 
     <div class="container mt-5">
