--- a/index.html
+++ b/index.html
@@ -249,23 +249,23 @@
 
         .tagline {
             font-family: 'Poppins', sans-serif;
-            font-size: 36px;
+            font-size: 40px;
             font-weight: 600;
             text-align: center;
-            color: #0d47a1;
-            /* deep blue */
-            margin: 30px 0;
+            color: #ffffff;
+            /* PURE WHITE for contrast */
+            margin: 35px 0;
+            letter-spacing: 0.5px;
+            text-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
         }
 
         .tagline span {
-            color: #2e7d32;
-            /* rich green */
+            background: linear-gradient(90deg, #a5d6a7, #66bb6a);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
             font-weight: 700;
         }
 
-        .tagline {
-            text-shadow: 1px 2px 6px rgba(0, 0, 0, 0.1);
-        }
 
         .tutors-section {
             background: linear-gradient(135deg, #f4f9ff, #eef7f2);
