--- a/index.html
+++ b/index.html
@@ -247,25 +247,40 @@
             margin-bottom: 20px;
         }
 
+        .hero-title {
+            font-family: 'Poppins', sans-serif;
+            font-size: 44px;
+            font-weight: 700;
+            color: #ffffff;
+            text-align: center;
+            margin-bottom: 25px;
+            letter-spacing: 0.5px;
+        }
+
         .tagline {
             font-family: 'Poppins', sans-serif;
-            font-size: 40px;
-            font-weight: 600;
+            font-size: 34px;
+            font-weight: 500;
             text-align: center;
             color: #ffffff;
-            /* PURE WHITE for contrast */
-            margin: 35px 0;
-            letter-spacing: 0.5px;
-            text-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+            margin-bottom: 30px;
         }
 
         .tagline span {
-            background: linear-gradient(90deg, #a5d6a7, #66bb6a);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            color: #b9f6ca;
+            /* mint green */
             font-weight: 700;
+            border-bottom: 3px solid #69f0ae;
+            padding-bottom: 4px;
         }
 
+        .hero-subtext {
+            font-family: 'Poppins', sans-serif;
+            font-size: 16px;
+            color: rgba(255, 255, 255, 0.9);
+            text-align: center;
+            margin-bottom: 35px;
+        }
 
         .tutors-section {
             background: linear-gradient(135deg, #f4f9ff, #eef7f2);
@@ -369,12 +384,18 @@
         <img src="./web-stock-online-learning-b-x-1024.jpg" alt="Student Right" class="popup-right-img">
 
         <img src="./Screenshot 2026-01-25 033020.png" alt="Logo" class="profile-img">
-        <h1>Transform Your Learning with Online Tutors</h1>
+        <h1 class="hero-title">
+            Transform Your Learning with Online Tutors
+        </h1>
+
         <h2 class="tagline">
             Planting Knowledge, <span>Harvesting Success!</span>
         </h2>
 
-        <p><strong>We offer One-to-One Classes for a personalized learning experience!</strong></p>
+        <p class="hero-subtext">
+            We offer One-to-One classes for a personalized learning experience!
+        </p>
+
         <a href="#contact-form" class="btn-highlight">Book a Trial Session</a>
     </div>
 
