--- a/index.html
+++ b/index.html
@@ -257,21 +257,12 @@
             letter-spacing: 0.5px;
         }
 
-        .tagline {
-            font-family: 'Poppins', sans-serif;
-            font-size: 34px;
-            font-weight: 500;
-            text-align: center;
-            color: #ffffff;
-            margin-bottom: 30px;
-        }
-
         .tagline span {
-            color: #b9f6ca;
-            /* mint green */
+            background: linear-gradient(90deg, #ff5252, #ff9800);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
             font-weight: 700;
-            border-bottom: 3px solid #69f0ae;
-            padding-bottom: 4px;
+            text-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
         }
 
         .hero-subtext {
