--- a/index.html
+++ b/index.html
@@ -257,13 +257,41 @@
             letter-spacing: 0.5px;
         }
 
-        .tagline span {
+        .tagline {
+            font-family: 'Poppins', sans-serif;
+            font-size: 36px;
+            font-weight: 600;
+            text-align: center;
+            margin: 30px 0;
+            color: #ffffff;
+            text-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+        }
+
+        /* Planting Knowledge → Growth, Calm, Trust */
+        .tagline .plant {
+            color: #b9f6ca;
+            /* soft mint green */
+            font-weight: 600;
+            border-bottom: 3px solid rgba(185, 246, 202, 0.7);
+            padding-bottom: 4px;
+        }
+
+        /* Harvesting Success → Power, Result, Attention */
+        .tagline .harvest {
             background: linear-gradient(90deg, #ff5252, #ff9800);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             font-weight: 700;
-            text-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+            margin-left: 8px;
+            text-shadow: 0 3px 10px rgba(0, 0, 0, 0.35);
         }
+
+        @media (max-width: 768px) {
+            .tagline {
+                font-size: 26px;
+            }
+        }
+
 
         .hero-subtext {
             font-family: 'Poppins', sans-serif;
@@ -380,8 +408,10 @@
         </h1>
 
         <h2 class="tagline">
-            Planting Knowledge, <span>Harvesting Success!</span>
+            <span class="plant">Planting Knowledge</span>,
+            <span class="harvest">Harvesting Success!</span>
         </h2>
+
 
         <p class="hero-subtext">
             We offer One-to-One classes for a personalized learning experience!
