--- a/index.html
+++ b/index.html
@@ -348,6 +348,10 @@
             color: #555;
         }
 
+        iframe {
+            border-radius: 14px;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+        }
 
 
 
@@ -532,23 +536,32 @@
 
     <div class="container mt-5">
         <h2 class="text-center">Video Testimonials</h2>
+
         <div class="row mt-4 justify-content-center">
+
             <div class="col-md-6 mb-4">
                 <div class="ratio ratio-16x9">
-                    <iframe src="https://youtu.be/IptC7oeTNkE?si=sBXNjuIdMhCa2Xaa" title="Student Testimonial 1"
-                        allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/IptC7oeTNkE" title="Student Testimonial 1"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                    </iframe>
                 </div>
                 <p class="text-center mt-2">Riya shares her success story</p>
             </div>
+
             <div class="col-md-6 mb-4">
                 <div class="ratio ratio-16x9">
-                    <iframe src="https://youtu.be/_FTHYBUGfB8?si=H_0kd55-DIK_D1Ft" title="Student Testimonial 2"
-                        allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/_FTHYBUGfB8" title="Student Testimonial 2"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                    </iframe>
                 </div>
                 <p class="text-center mt-2">Aman talks about his learning journey</p>
             </div>
+
         </div>
     </div>
+
     <!-- CONTACT / TRIAL FORM (ADDED FOR FUNCTIONALITY) -->
     <section class="contact-section" id="contact-form">
         <div class="container">
