--- a/index.html
+++ b/index.html
@@ -353,6 +353,39 @@
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
         }
 
+        .footer {
+            background: #0d47a1;
+            color: #ffffff;
+            padding: 30px 10px;
+            text-align: center;
+        }
+
+        .footer h2 {
+            font-family: 'Poppins', sans-serif;
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+
+        .footer p {
+            font-family: 'Poppins', sans-serif;
+            font-size: 15px;
+        }
+
+        .mini-footer {
+            background: #f1f8ff;
+            color: #333;
+            text-align: center;
+            padding: 8px 10px;
+            font-family: 'Poppins', sans-serif;
+            font-size: 13px;
+            border-top: 1px solid #ddd;
+        }
+
+        .mini-footer strong {
+            color: #2e7d32;
+        }
+
+
 
 
         @media (max-width: 768px) {
@@ -616,6 +649,14 @@
         <h2 id="contact">Contact Us</h2>
         <p>Email: gyanvriksh.edu@gmail.com | Phone: +91-8585895058</p>
     </footer>
+
+    <footer class="mini-footer">
+        <p>
+            Want a website like this?
+            <strong>Call / WhatsApp: +91-8585895058</strong>
+        </p>
+    </footer>
+
     <script src="enquiry.js"></script>
     <script src="script.js"></script>
 </body>
