--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                     <div class="tutor-card">
                         <img src="./keshav.png" class="tutor-img" alt="Keshav Kishore">
                         <h4>Keshav Kishore</h4>
-                        <p>Founder & 5+ Years Teaching Experience</p>
+                        <p>Founder & Lead Educator</p>
                     </div>
                 </div>
 
