--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         </h1>
 
         <h2 class="tagline">
-            <span class="plant">Planting Knowledge</span>,
+            <span class="plant">Planting Knowledge,</span>
             <span class="harvest">Harvesting Success!</span>
         </h2>
 
