--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         /* Brand highlight */
         .hero-title .brand {
             font-weight: 800;
-            background: linear-gradient(90deg, #d6a5c1, #bb6689);
+            background: linear-gradient(#ff5252, #ef0404,#da0960);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             letter-spacing: 0.6px;
