--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         }
 
         .mini-footer strong {
-            color: #2e7d32;
+            color: #ef0404;
         }
 
         /* 🔑 MAIN FIX: Phone number kabhi break nahi hoga */
