--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         /* Brand highlight */
         .hero-title .brand {
             font-weight: 800;
-            background: linear-gradient(#ff5252, #ef0404,#da0960);
+            background: linear-gradient(#ff5252, #ef0404, #da0960);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             letter-spacing: 0.6px;
@@ -427,7 +427,7 @@
             white-space: nowrap;
         }
 
-    
+
         @media (max-width: 480px) {
 
             .footer p,
@@ -568,6 +568,14 @@
                         <img src="./Aryan.jpeg" class="tutor-img" alt="Aryan Baranwal">
                         <h4>Aryan Baranwal</h4>
                         <p>Polity & Humanities</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 mb-4">
+                    <div class="tutor-card">
+                        <img src="./Aryan.jpeg" class="tutor-img" alt="Aryan Baranwal">
+                        <h4>Rishav Kishore</h4>
+                        <p>Computer Science & Programming</p>
                     </div>
                 </div>
 
