--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
 
                 <div class="col-md-6 col-lg-3 mb-4">
                     <div class="tutor-card">
-                        <img src="./Aryan.jpeg" class="tutor-img" alt="Aryan Baranwal">
+                        <img src="" class="tutor-img" alt="Aryan Baranwal">
                         <h4>Rishav Kishore</h4>
                         <p>Computer Science & Programming</p>
                     </div>
