--- a/index.html
+++ b/index.html
@@ -573,9 +573,9 @@
 
                 <div class="col-md-6 col-lg-3 mb-4">
                     <div class="tutor-card">
-                        <img src="" class="tutor-img" alt="Aryan Baranwal">
+                        <img src="" class="tutor-img" alt="Rishav Kishore">
                         <h4>Rishav Kishore</h4>
-                        <p>Computer Science & Programming</p>
+                        <p>Science</p>
                     </div>
                 </div>
 
