--- a/index.html
+++ b/index.html
@@ -554,6 +554,15 @@
                     </div>
                 </div>
 
+                
+                <div class="col-md-6 col-lg-3 mb-4">
+                    <div class="tutor-card">
+                        <img src="./Trishna.jpeg" class="tutor-img" alt="Trishna Dey">
+                        <h4>Trishna Dey</h4>
+                        <p>Managing Director</p>
+                    </div>
+                </div>
+
 
                 <div class="col-md-6 col-lg-3 mb-4">
                     <div class="tutor-card">
@@ -575,7 +584,7 @@
                     <div class="tutor-card">
                         <img src="./rishav.jpeg" class="tutor-img" alt="Rishav Kishore">
                         <h4>Rishav Kishore</h4>
-                        <p>Science</p>
+                        <p>Science Educator</p>
                     </div>
                 </div>
 
