--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+
 <body>
+    <div style="background:#ff9800;color:white;text-align:center;padding:8px;font-weight:600;">
+        🚀 Admissions Open 2026 | Free Demo Class Available | Limited Seats
+    </div>
+
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <span class="phone-number me-auto">📞 +91-8585895058</span>
@@ -83,6 +88,34 @@
             </p>
         </div>
     </div>
+    <section class="container mt-5">
+        <h2 class="text-center mb-4">Why Choose GyanVriksh?</h2>
+
+        <div class="row text-center">
+
+            <div class="col-md-3">
+                <h5>📚 1-to-1 Classes</h5>
+                <p>Personal attention to every student</p>
+            </div>
+
+            <div class="col-md-3">
+                <h5>📊 Weekly Tests</h5>
+                <p>Regular progress tracking</p>
+            </div>
+
+            <div class="col-md-3">
+                <h5>👨‍🏫 Expert Tutors</h5>
+                <p>IIT/NIT level teaching</p>
+            </div>
+
+            <div class="col-md-3">
+                <h5>📞 Parent Updates</h5>
+                <p>Monthly performance report</p>
+            </div>
+
+        </div>
+    </section>
+
 
     <h2 id="methodology" class="text-center mt-5">Our Working Methodology</h2>
     <div class="methodology-container">
@@ -148,6 +181,35 @@
 
     </div>
     </div>
+    <section class="container mt-5" id="Result">
+        <h2 class="text-center mb-4">Our Top Results</h2>
+
+        <div class="row text-center">
+
+            <div class="col-md-4 mb-4">
+                <div class="card p-3">
+                    <h4>Rohit Kumar</h4>
+                    <p>Math: 52% → 91%</p>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card p-3">
+                    <h4>Ananya Sharma</h4>
+                    <p>Boards: 78% → 94%</p>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card p-3">
+                    <h4>Sainik School</h4>
+                    <p>3 Students Selected</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
 
     <div id="trial" class="text-center mt-5">
         <h2>Book a Trial Session</h2>
@@ -276,6 +338,8 @@
 
     <script src="enquiry.js"></script>
     <script src="script.js"></script>
+    <a href="https://wa.me/918585895058" class="whatsapp-float" target="_blank">💬</a>
+
 </body>
 
 </html>
